--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
+    "@nuxtjs/axios": "^5.13.6",
     "sass": "^1.58.0",
     "vuetify": "^3.1.3"
   }
